--- a/templates/base.html
+++ b/templates/base.html
@@ -90,8 +90,12 @@
                 <a href="#">最新资源</a>
                 <a href="#">热门资源</a>
                 {% if user.is_authenticated %}
-                    <a href="{% url 'core:upload_resource' %}">上传资源</a>
-                    <a href="#">{{ user.username }}</a>
+                    {% if user.upload_permission %}
+                        <a href="{% url 'core:upload_resource' %}">上传资源</a>
+                    {% else %}
+                        <a href="{% url 'accounts:apply_permission' %}" style="color: #ff6b6b; font-weight: bold;">申请上传</a>
+                    {% endif %}
+                    <a href="{% url 'accounts:permission_status' %}">{{ user.username }}</a>
                     <a href="{% url 'accounts:logout' %}">退出</a>
                 {% else %}
                     <a href="{% url 'accounts:login' %}">登录</a>
