feat: 优化页面标题、描述和关键词的SEO动态显示

--- a/templates/base.html
+++ b/templates/base.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}资源分享站{% endblock %}</title>
-    <meta name="description" content="免费资源分享下载，包含影视、游戏、素材等多种资源">
-    <meta name="keywords" content="资源下载,网盘资源,影视资源,游戏下载,素材下载">
+    <meta name="description" content="{% block description %}免费资源分享站 | 无需注册、海量影视、游戏、素材、软件网盘下载，每日更新，一键获取！{% endblock %}">
+    <meta name="keywords" content="{% block keywords %}资源下载,免费资源,网盘资源,影视资源,电影下载,电视剧下载,游戏下载,单机游戏,手游,素材下载,设计素材,PPT模板,软件下载,学习资料,电子书{% endblock %}">
     <!-- 这里稍后添加CSS -->
     <style>
         /* 基础样式 */
